még nincs kész de mar adtam pár sectiont

--- a/index.html
+++ b/index.html
@@ -20,19 +20,24 @@
 </nav>
 </header>
 
+
 <main>
 
-
-
-   <h2 id="Első mozdony"> LMS Jinty</h2>
+<section id="Első mozdony">
+    <article>
+   <h2 > LMS Jinty</h2>
    <img src="kepek/Jinty.jpg" alt="">
-<p>A Jinty-ket a London Midland Scottish railway építette elősször 1924-ben. Összesen 422 építettek. Az utolsót 1967-kor vonták ki a forgalomból a British Railways tulajdonában.</p>
+   <p>A Jinty-ket a London Midland Scottish railway építette elősször 1924-ben. Összesen 422 építettek. Az utolsót 1967-kor vonták ki a forgalomból a British Railways tulajdonában.</p>
+   </article>
+</section>
 
-
-<h2 id="Második mozdony">Jinty Lbscr Terrier</h2>
+<section id="Második mozdony">
+    <article>
+<h2 >Jinty Lbscr Terrier</h2>
 <img src="kepek/Stepney.webp" alt="">
 <p>A Terrier-eket a London, Brighton and South Coast Railway építette elősször 1872-ben. Érdekes módon ezeket a kis mozdonyokat eredetileg expressz vonatok húzására találták ki. Az utolsót 1963-ban vonták ki a forgalomból a British Railways tulajdonában.</p>
-
+</article>
+</section>
 
 <h2 id="Harmadik mozdony">Lbscr E2</h2>
 <img src="kepek/Usefull.webp" alt="">
